--- a/CSS/index.css
+++ b/CSS/index.css
@@ -48,8 +48,8 @@
   width: 350px;
   height: 100vh;
   /* This give the height 100% of the screen or, '100% of View Height' */
-  background-color: #81C784;
-  border: 1px solid #004D40;
+  background-color: #81c784;
+  border: 1px solid #004d40;
   border-left: none;
   border-bottom: none;
   z-index: 2;
@@ -63,6 +63,27 @@
 }
 .menu--open {
   display: block;
+  animation: open 1s;
+}
+.menu--closing {
+  display: block;
+  animation: close 1s;
+}
+@keyframes open {
+  0% {
+    left: -350px;
+  }
+  100% {
+    left: 0px;
+  }
+}
+@keyframes close {
+  0% {
+    left: 0px;
+  }
+  100% {
+    left: -350px;
+  }
 }
 .articles {
   margin-top: 95px;
