Fixed slide bug

--- a/Article/Article.less
+++ b/Article/Article.less
@@ -43,14 +43,14 @@
 
 .article-open {
   height: 400px;
-  animation: open 1s;
+  animation: openArticle 1s;
 }
 
 .article-closing {
-  animation: close 1s;
+  animation: closeArticle 1s;
 }
 
-@keyframes open {
+@keyframes openArticle {
   0% {
     height: 50px;
   }
@@ -60,7 +60,7 @@
   }
 }
 
-@keyframes close {
+@keyframes closeArticle {
   0% {
     height: 400px;
   }
